<resources>
    <string name="app_name">VBelt-Controller</string>
    <string name="start">Start</string>
    <string name="destination">Destination</string>
    <string name="destination_not_found">Destination not found…</string>
    <string name="navigate">Navigate</string>
    <string name="fill_out_destination">Fill out the destination field!</string>
    <string name="current_location">Current location</string>
    <string name="next_step">Next step</string>
    <string name="steps">Steps</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="failed_to_connect">Failed to connect!</string>
    <string name="failed_to_disconnect">Failed to disconnect!</string>
    <string name="failed_to_publish">Failed to publish message!</string>
    <string name="connection_lost">Connection last…</string>
    <string name="demo">Demo</string>
    <string name="left_100m">Left 100M</string>
    <string name="left_50m">Left 50M</string>
    <string name="left_10m">Left 10M</string>
    <string name="left_1m">Left 1M</string>
    <string name="center_100m">Center 100M</string>
    <string name="center_50m">Center 50M</string>
    <string name="center_10m">Center 10M</string>
    <string name="center_1m">Center 1M</string>
    <string name="right_100m">Right 100M</string>
    <string name="right_50m">Right 50M</string>
    <string name="right_10m">Right 10M</string>
    <string name="right_1m">Right 1M</string>
</resources>
